# ntchess

./: .gitignore  CMakeLists.txt  build-windows.bat
qml/: AnalysisSettingsDialog.qml  AnalysisView.qml  ChessBoard.qml  Main.qml  NewGameDialog.qml  SettingsDialog.qml
src/: main.cpp
src/backend/: Board.cpp  Board.h  Game.cpp  Game.h  misc.cpp  misc.h  movegen.cpp  movegen.h  notation.cpp  notation.h  types.h  uci_engine.cpp  uci_engine.h
src/bridge/: GameBridge.cpp  GameBridge.h
